render the Google OAuth2 callback using React
