# server/configureGoogleAuth.js
@@ -1,10 +1,13 @@
 import passport from 'passport'
 import { OAuth2Strategy as GoogleOAuth2Strategy } from 'passport-google-oauth'
 
-import { updateUser as updateUserGoogleAuthInfo } from './controllers/GoogleOAuth2'
+import {
+  updateUser as updateUserGoogleAuthInfo,
+  callback as handleGoogleOAuth2Callback
+} from './controllers/GoogleOAuth2'
 
 
-export default function configureGoogleAuth(/* app */) {
+export default function configureGoogleAuth(app) {
   passport.use(
     new GoogleOAuth2Strategy({
       clientID: process.env.GOOGLE_API_CLIENT_ID,
@@ -12,4 +15,6 @@ export default function configureGoogleAuth(/* app */) {
       callbackURL: `${process.env.APP_BASEURL}/auth/google/callback`,
     }, updateUserGoogleAuthInfo)
   )
+
+  app.get('/auth/google/callback', handleGoogleOAuth2Callback)
 }
